syntax = "proto3";

package api.task.v1;
option go_package = "drpshop/api/task/v1;v1";
option java_multiple_files = true;
option java_package = "api.task.v1";

// Task服务
service TaskService {
	rpc Run(TaskReq) returns (TaskRes);
}
message TaskReq {
    string command = 2; // 命令
    int32 timeout = 3;  // 任务执行超时时间
    int64 id = 4; // 执行任务唯一ID
}

message TaskRes {
    string output = 1; // 命令标准输出
    string error = 2;  // 命令错误
}
